	PR binutils/12534 	* arm-dis.c (thumb32_opcodes): Add %L suffix to LDRD and STRD insn 	patterns. 	(print_insn_thumb32): Handle %L.

* gas/arm/thumb32.s: Add PC relative LDRD and STRD insns.
	* gas/arm/thumb32.l: Update expected output.
	* gas/arm/thumb32.d: Update expected disassembly.